--- a/src/components/Formulrio.css
+++ b/src/components/Formulrio.css
@@ -25,3 +25,10 @@
     color: #fff;
     border: none
   }
+  .my-input {
+    width: 100%;
+    line-height: 1.5;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  
