--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -22,7 +22,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+ 
+  background: rgba(42, 27, 161, 0.7);
+  background: linear-gradient(60deg, rgba(131, 84, 218, 0.7), rgba(54, 85, 224, 0.7) 100%);
+
   z-index: 900; /* Asegúrate de que el z-index sea menor que el AppBar */
 } 
 
