--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,10 @@
     height: 200px; /* Ajusta la altura según tus necesidades */
   }
 }
+
+
+body{
+  font-family: "Montserrat";
+   font-weight: 500;
+  font-style: 'normal'
+}
