--- a/src/App.css
+++ b/src/App.css
@@ -28,5 +28,6 @@
 body{
   font-family: "Montserrat";
    font-weight: 500;
-  font-style: 'normal'
+  font-style: 'normal';
+  background-color: #F7F6F6;
 }
