--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -3,8 +3,9 @@
   overflow: hidden;
   width: 100%; /* o un tamaño específico en píxeles o porcentaje */
   height: 100vh; /* o el tamaño que desees */
- background-color: #1ae5e2;
-display: flex;
+ background-color: #abe6e5;
+
+ display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 50px;
