--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -3,7 +3,7 @@
   overflow: hidden;
   width: 100%; /* o un tamaño específico en píxeles o porcentaje */
   height: 100vh; /* o el tamaño que desees */
- background-color: #abe6e5;
+ background-color: #8bdedd;
 
  display: flex;
   justify-content: center;
