--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -3,7 +3,8 @@
   overflow: hidden;
   width: 100%; /* o un tamaño específico en píxeles o porcentaje */
   height: 100vh; /* o el tamaño que desees */
-  background-color: #5AC6C3;
+  background-color:#8BE6E2;
+  /* background-color: #5AC6C3; */
 /*  background-color: #8bdedd; */
 /* background-color: #94f5e9; */
 
