--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -77,7 +77,7 @@ padding-right: 10px; }
 padding-right: 10px; 
   }
   .centrado > div {
-   
+   padding-top: 100px;
 padding-left: 9px;
 padding-right: 9px;
 letter-spacing: .03em;
