Revert "update-share-blog"
This reverts commit dac568077474a8016f5a02ff53f47932451ad288.

--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -14,8 +14,6 @@
   margin-top: 0;
   position: relative;
   width: 100%;
-  min-height: 100vh; /* Ensure minimum height */
-  contain: layout paint; /* Improve performance */
 
 /*   background-color: #19d8db;
  */
@@ -36,8 +34,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 100%;
-  padding-top: 0; /* Remove variable padding */
+  padding-top: 20px; /* Ajusta este valor según sea necesario */
 }
 
 .centrado > div {
@@ -47,7 +44,7 @@
   letter-spacing: .05em;
   line-height: 1.9em;
   text-transform: capitalize;
-  margin-top: 0; /* Remove negative margin that causes jump */
+  margin-top: -100px; /* Ajusta este valor para subir el texto */
  
 }
 
@@ -80,19 +77,17 @@ padding-right: 10px; }
 padding-right: 10px; 
   }
   .centrado > div {
-   padding-top: 0; /* Remove padding that causes shifting */
-   margin-top: 0; /* Remove margin that causes shifting */
-   padding-left: 9px;
-   padding-right: 9px;
-   letter-spacing: .03em;
-   line-height: 2.0em;
-   position: relative; /* Ensure positioning context */
-   top: 0; /* Fix position */
+   padding-top: 100px;
+   margin-top: 30px;
+padding-left: 9px;
+padding-right: 9px;
+letter-spacing: .03em;
+  line-height: 2.0em;
   }
 
   .centrado > div p {
     font-size: 15px; /* Ajusta según sea necesario */
-    margin-top: 20px; /* Reduced space between h2 and paragraph */
+    margin-top: 30px; /* Espacio entre el h2 y el párrafo */
     letter-spacing: .00em;
     line-height: 1.8em;
 
