--- a/src/components/inicio.css
+++ b/src/components/inicio.css
@@ -1,19 +1,11 @@
 .contenedor-imagen {
-
- background-image: url(../assets/home3-slider.png);
- @media (max-width: 600px) {
-  background-color: #19d8db;
-
- }
- background-position: bottom;
- background-size: cover;
- display: block;
- background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh !important;
+  /* El background se define en `Inicio.js` via MUI `sx` para evitar que desaparezca
+     en runtime/producción por orden de inyección o resolución de assets. */
+  min-height: 100vh;
   margin-top: 0;
   position: relative;
   width: 100%;
+  overflow: hidden;
 
 /*   background-color: #19d8db;
  */
@@ -22,7 +14,7 @@
 /*  background-color: #8bdedd; */
 /* background-color: #94f5e9; */
 
- display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 /*   padding-top: 50px; */
@@ -63,6 +55,10 @@
 }
 
 @media (max-width: 600px) {
+  .contenedor-imagen {
+    min-height: 100vh;
+  }
+
   .contenedor-imagen h1 {
     font-size: 30px; /* Tamaño de fuente más pequeño para dispositivos móviles */
  
@@ -94,6 +90,27 @@ letter-spacing: .03em;
   }
 }
 
+/* Tablets (portrait/landscape) */
+@media (min-width: 601px) and (max-width: 960px) {
+  .contenedor-imagen {
+    min-height: 90vh;
+  }
+}
+
+/* Escritorio / laptops (md-lg) */
+@media (min-width: 961px) and (max-width: 1280px) {
+  .contenedor-imagen {
+    min-height: 90vh;
+  }
+}
+
+/* Escritorio grande */
+@media (min-width: 1281px) {
+  .contenedor-imagen {
+    min-height: 90vh;
+  }
+}
+
 .texto-superpuesto {
   position: absolute;
   top: 50%;
@@ -106,10 +123,6 @@ letter-spacing: .03em;
   display: flex;
   justify-content: center;
   margin-top: 20px; /* Espacio entre el texto y el botón */
-}
-
-.boton-container > button {
-  /* Ajusta el tamaño del botón si es necesario */
 }
 .imagen-fondo {
   position: absolute;
